language-server/src/tests/snapshots/gleam_core__language_server__tests__action__import_type_constructor_qualified_inside_guard_without_existing_import.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport wobble\n\nfn wibble() -> Nil {\n    case Nil {\n        _ if Wobble == Wobble -> Nil\n        _ -> Nil\n    }\n}\n"
---
----- BEFORE ACTION

import wobble

fn wibble() -> Nil {
    case Nil {
        _ if Wobble == Wobble -> Nil
             ↑                      
        _ -> Nil
    }
}


----- AFTER ACTION

import wibble
import wobble

fn wibble() -> Nil {
    case Nil {
        _ if wibble.Wobble == Wobble -> Nil
        _ -> Nil
    }
}
