language-server/src/tests/snapshots/gleam_core__language_server__tests__action__import_type_constructor_qualified_inside_pattern_with_existing_import.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport wibble\n\nfn wibble(wib: wibble.Wibble) -> Nil {\n    case wib {\n        Wobble -> Nil\n    }\n}\n"
---
----- BEFORE ACTION

import wibble

fn wibble(wib: wibble.Wibble) -> Nil {
    case wib {
        Wobble -> Nil
        ↑            
    }
}


----- AFTER ACTION

import wibble

fn wibble(wib: wibble.Wibble) -> Nil {
    case wib {
        wibble.Wobble -> Nil
    }
}
