language-server/src/tests/snapshots/gleam_core__language_server__tests__action__import_type_constructor_qualified_with_existing_import_without_alias.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport wibble as _\n\nfn wibble() -> Nil {\n    Wobble\n    Nil\n}\n"
---
----- BEFORE ACTION

import wibble as _

fn wibble() -> Nil {
    Wobble
    ↑     
    Nil
}


----- AFTER ACTION

import wibble
import wibble as _

fn wibble() -> Nil {
    wibble.Wobble
    Nil
}
